Fixing resume link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,13 @@
 
           <nav class="cover-navigation navigation--social">
             <ul class="navigation">
-
+              <!-- Resume -->
+            <li class="navigation__item">
+              <a href="{{"assets/AnalystResume.pdf" | prepend: site.baseurl }}">
+                <i class="icon icon-page"></i>
+                  <span class="label">Resume</span>
+               </object>
+            </li>
             {% if site.author.twitter_username %}
               <!-- Twitter -->
               <li class="navigation__item">
