--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,6 +27,14 @@
           <nav class="cover-navigation navigation--social">
             <ul class="navigation">
 
+          <!-- Resume -->
+              <li class="navigation__item">
+                <a href="{{"assets/AnalystResume.pdf" | prepend: site.baseurl }}">
+                  <i class="icon icon-page"></i>
+                  <span class="label">Resume</span>
+                </a>
+              </li>
+
             {% if site.author.twitter_username %}
               <!-- Twitter -->
               <li class="navigation__item">
