--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,7 +29,7 @@
 
           <!-- Resume -->
               <li class="navigation__item">
-                <a href="{{"assets/AnalystResume.pdf" | prepend: site.baseurl }}">
+                <a href="{{"assets/AnalystResume.pdf" | prepend: site.baseurl }}" title="My Resume!">
                   <i class="icon icon-page"></i>
                   <span class="label">Resume</span>
                 </a>
