--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,8 +8,10 @@
 
     <div class="panel-main__inner panel-inverted">
     <div class="panel-main__content">
-        <a href="{{ site.baseurl }}" title="link to home of {{ site.title }}">
-          <img src="{{ "assets/Chibime.jpg" | prepend: site.baseurl }}" class="user-image" alt="My Profile Photo">
+        <a href="{{ site.baseurl }}" title="About Me!">
+          <img id="myImg"
+          src="{{ "assets/Chibime.jpg" | prepend: site.baseurl }}"
+          class="user-image" alt="My Profile Photo">
           <h1 class="panel-cover__title panel-title">{{ site.title }}</h1>
         </a>
         <hr class="panel-cover__divider">
