--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,12 +8,59 @@
 
     <div class="panel-main__inner panel-inverted">
     <div class="panel-main__content">
-        <a href="{{ site.baseurl }}" title="About Me!">
+
+
           <img id="myImg"
           src="{{ "assets/Chibime.jpg" | prepend: site.baseurl }}"
-          class="user-image" alt="My Profile Photo">
+          class="user-image" alt="About Me!">
           <h1 class="panel-cover__title panel-title">{{ site.title }}</h1>
-        </a>
+
+          <!--The modal -->
+          <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+              <div class="modal-header">
+                <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
+                <h2>About Me!</h2>
+              </div>
+              <div class="modal-body">
+                <p><i>I love working with data more than Kanye West loves himself</i></p>
+                <p>I'm on a mission to understand Data Science through experimentation.
+                   My non-technical hobbies include (but are not limited to): tennis, music, puppy-watching, video games and
+                   contemplating existential dread</p>
+              </div>
+            </div>
+          </div>
+
+            <script>
+            // Get the modal
+            var modal = document.getElementById('myModal');
+
+            // Get the button that opens the modal
+            var image = document.getElementById("myImg");
+
+            // Get the <span> element that closes the modal
+            var span = document.getElementsByClassName("close")[0];
+
+            // When the user clicks the button, open the modal
+            image.onclick = function() {
+                modal.style.display = "block";
+            }
+
+            // When the user clicks on <span> (x), close the modal
+            span.onclick = function() {
+                modal.style.display = "none";
+            }
+
+            // When the user clicks anywhere outside of the modal, close it
+            window.onclick = function(event) {
+                if (event.target == modal) {
+                    modal.style.display = "none";
+                }
+            }
+            </script>
+
         <hr class="panel-cover__divider">
         <p class="panel-cover__description">{{ site.description }}</p>
         <hr class="panel-cover__divider panel-cover__divider--secondary">
