Everything did not break; make about me prettier-er

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
     <div class="panel-main__content">
 
 
-          <img id="myImg"
+          <img id="myImg" title="About Me!"
           src="{{ "assets/Chibime.jpg" | prepend: site.baseurl }}"
           class="user-image" alt="About Me!">
           <h1 class="panel-cover__title panel-title">{{ site.title }}</h1>
@@ -25,10 +25,12 @@
                 <h2>About Me!</h2>
               </div>
               <div class="modal-body">
-                <p><i>I love working with data more than Kanye West loves himself</i></p>
+                <p><em>I love working with data more than Kanye West loves himself!</em></p>
                 <p>I'm on a mission to understand Data Science through experimentation.
                    My non-technical hobbies include (but are not limited to): tennis, music, puppy-watching, video games and
-                   contemplating existential dread</p>
+                   contemplating existential dread.</p>
+                <p>In addition to my hobbies, some topics that I'm passionate about (and that I am likely to do work on)
+                are: education, technology, animals, health, and of course anything potentially humorous. </p>
               </div>
             </div>
           </div>
