Everything did not break; make about me scroll-ier

--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,9 @@
 }
 
 /* Modal Body */
-.modal-body {padding: 2px 16px;}
+.modal-body {padding: 2px 16px;
+    overflow-y: auto;
+}
 
 /* Modal Content */
 .modal-content {
