--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,10 +27,10 @@
               <div class="modal-body">
                 <p><em>I love working with data more than Kanye West loves himself!</em></p>
                 <p>I'm on a mission to understand Data Science through experimentation.
-                   My non-technical hobbies include (but are not limited to): tennis, music, puppy-watching, video games and
+                   My non-technical hobbies include: tennis, music, puppy-watching, video games and
                    contemplating existential dread.</p>
                 <p>In addition to my hobbies, some topics that I'm passionate about (and that I am likely to do work on)
-                are: education, technology, animals, health, and of course anything potentially humorous. </p>
+                are: education, technology, animals, health, and of course, anything potentially humorous. </p>
               </div>
             </div>
           </div>
