--- a/_includes/header.html
+++ b/_includes/header.html
@@ -80,7 +80,7 @@
 
           <!-- Resume -->
               <li class="navigation__item">
-                <a href="{{"assets/AnalystResume.pdf" | prepend: site.baseurl }}" title="My Resume!">
+                <a href="{{"assets/Resume_DanielleWilliams.10-28.pdf" | prepend: site.baseurl }}" title="My Resume">
                   <i class="icon icon-page"></i>
                   <span class="label">Resume</span>
                 </a>
