site is trying to source css from the wrong url

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,14 +3,14 @@
   <i class="icon icon-x-circle btn-mobile-close__icon hidden"></i>
 </span>
 
-<header class="panel-cover" style="background-image: url({{ site.baseurl }}images/sunrisesunset.jpg)">
+<header class="panel-cover" style="background-image: url({{ site.url }}images/sunrisesunset.jpg)">
   <div class="panel-main">
 
     <div class="panel-main__inner panel-inverted">
     <div class="panel-main__content">
 
        <img id="myImg" title="About Me!"
-          src="{{ site.baseurl }}images/Chibime.jpg"
+          src="{{ site.url }}images/Chibime.jpg"
           class="user-image" alt="About Me!"
             onclick="document.getElementById('myModal').style.display='block'"/>
 
