--- a/_includes/header.html
+++ b/_includes/header.html
@@ -83,7 +83,7 @@
 
               <!-- Resume -->
               <li class="navigation__item">
-                <a href="{{ site.url }}/assets/Resume_DanielleWilliams.10-28.pdf" title="My Resume">
+                <a href="{{ site.url }}/assets/Resume_DanielleWilliams.3_1.pdf" title="My Resume">
                   <i class="icon icon-page"></i>
                   <span class="label">Resume</span>
                 </a>
