Removing from site

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -81,13 +81,13 @@
           <nav class="cover-navigation navigation--social">
             <ul class="navigation">
 
-              <!-- Resume -->
+              <!-- Resume
               <li class="navigation__item">
                 <a href="{{ site.url }}/assets/Resume_DanielleWilliams.3_1.pdf" title="My Resume">
                   <i class="icon icon-page"></i>
                   <span class="label">Resume</span>
                 </a>
-              </li>
+              </li> -->
 
             {% if site.author.twitter_username %}
               <!-- Twitter -->
