About me, description update

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,8 +24,8 @@
                 <h2>About Me!</h2>
               </div>
               <div class="modal-body">
-                <p><em>I love working with data more than Kanye West loves himself!</em></p>
-                <p>I'm on a mission to understand Data Science through experimentation.
+                <p><em>Mastering computer science so I'll know how to defend myself when the machines take over</em></p>
+                <p> Currently pursuing a Masters in Computer Science and here is where I experiment with programming.
                    My non-technical hobbies include: tennis, music, puppy-watching, video games and
                    contemplating existential dread.</p>
                 <p>In addition to my hobbies, some topics that I'm passionate about (and that I am likely to do work on)
