--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,14 @@
----
+--- 
 import { getCollection } from "astro:content";
 import PageLayout from "@/layouts/Base";
 import PostPreview from "@/components/blog/PostPreview";
 import SocialList from "@/components/SocialList";
 import About from "@/components/About";
 import { sortMDByDate } from "@/utils";
+import { Image } from "@astrojs/image/components";
+
+import Modal from "@/components/Modal";
+import chibiMe from "../assets/Chibime.jpg";
 
 const MAX_POSTS = 10;
 const allPosts = await getCollection("post");
@@ -15,11 +19,10 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 	<section>
 		<h1 class="title mb-6">Hello World!</h1>
 		<p class="mb-4">
-			<About/>
-			Hi, I’m a theme for Astro, an example of how you can use this starter to create a personal
-			blog. If you want to know more about how you can customise me, add more posts, and make it
-			your own, click on one the github icon link below which will take you to my repo.
+			<About class="flex flex-col sm:flex-row"/>
+            <Modal src={chibiMe} class="flex sm:flex-row"/>
 		</p>
+
 		<SocialList />
 	</section>
 	<section aria-label="Blog post list" class="mt-16">
