--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -94,7 +94,7 @@ const paginationProps = {
 					</ul>
 					<span class="mt-4 block sm:text-right">
 						<a class="sm:hover:text-accent" href="/tags" aria-label="View all blog categories">
-							View all →
+							View all tags →
 						</a>
 					</span>
 				</aside>
